--- a/src/pages/Projects.css
+++ b/src/pages/Projects.css
@@ -10,6 +10,9 @@
     margin: 30px 50px;
 }
 @media (max-width:768px) {
+    .projects{
+        margin: 7vh 4vw 3vh 10vw;
+    }
     .projects h1{
         font-size:60px ;
     }
